# jerver

./: mypy.ini  pyproject.toml  requirements.txt  setup.py  test-requirements.txt
.github/workflows/: mypy_check.yml  tests.yml
jerver/: JerverApp.py  __init__.py
jerver/config/: __init__.py  server_config.py
jerver/exceptions/: __init__.py  exceptions.py
jerver/inject/: __init__.py  inject.py  injectable.py  useInject.py
jerver/resources/: __init__.py  base_resource.py  service.py
jerver/service/: BaseBusinessService.py  ServiceInterface.py  __init__.py
jerver/service/crud/: CoreCRUDService.py  __init__.py
jerver/transaction/: __init__.py  transactional.py
mypy_stubs/flask_restful/: __init__.pyi  fields.pyi  inputs.pyi  reqparse.pyi
mypy_stubs/flask_restful/representations/: json.pyi
mypy_stubs/flask_restful/utils/: __init__.pyi  cors.pyi  crypto.pyi
tests/crud/: AnyTestBusinessObject.py  AnyTestBusinessObjectCRUDService.py  RelatedTestBusinessObject.py  test_CoreCRUDService.py
tests/crud/data/: __init__.py  data.py
